packages/fuels-abigen-macro/tests/ui/missing_abi_attribute.stderr
error: 'abi' attribute is missing!
 --> tests/ui/missing_abi_attribute.rs:3:18
  |
3 | abigen!(Contract(name = "SomeName"));
  |                  ^^^^
